--- a/c64/style.css
+++ b/c64/style.css
@@ -3,4 +3,4 @@
 main {display:grid;margin:0 auto;align-items:center;width:fit-content}
 header,figcaption {font-variant:small-caps;text-align:center;font-size:xx-large;font-family:"C64 Pro"}
 a[style] {display:inline-block;width:384px;height:272px;background:no-repeat var(--vg);font-size:18pt}
-figcaption:has(+ a[style]:hover),figure:focus-within > figcaption {color:#4D44FF}
+figcaption:has(+ a:hover),figure:focus-within > figcaption {color:#4D44FF}
